--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="search_hint">Search</string>
     <string name="search_string">Define</string>
     <string name="desc">Description</string>
+    <string name="similar_word">Similar: </string>
+    <string name="opposite_word">Opposite: </string>
     <string name="action_settings">Settings</string>
     <string name="action_credits">Credits</string>
     <string name="filter_title_view_dict">GDict Filter</string>
